--- a/app/Resources/views/base.html.twig
+++ b/app/Resources/views/base.html.twig
@@ -91,7 +91,7 @@
                         src="https://www.santafe.gov.ar/assets/standard/images/logo-stafeavanza.jpg">
                     </div>
                     <h1 class="div_right">
-                        Ministerio de Ciencia, Tecnología e Innovación Productiva
+                        {{ TITULO }}
                     </h1>
 
 
