--- a/src/FormulariosBundle/Resources/views/Login/login.html.twig
+++ b/src/FormulariosBundle/Resources/views/Login/login.html.twig
@@ -24,7 +24,7 @@
 		                    <span class="ui-icon ui-icon-info" style="float: left; margin-right: .3em;"></span> 
 		                    <strong>Ayuda:</strong>
 		                    Si Ud. no posee Usuario, regístrese en el siguiente   
-		                    <a href="" style="color:red!important"> Enlace </a> <br/>
+		                    <a href="{{ path('nuevoUsuario') }}" style="color:red!important"> Enlace </a> <br/>
 		                    <span class="ui-icon ui-icon-info" style="float: left; margin-right: .3em;"></span> 
 		                    <strong>Ayuda:</strong>
 		                    En caso de haber olvidado su contraseña siga el siguiente <a href="" style="color:red!important"> Enlace </a>.
