--- a/app/Resources/views/base.html.twig
+++ b/app/Resources/views/base.html.twig
@@ -34,7 +34,7 @@
 
         <script src="//www.santafe.gov.ar/assets/jquery/jquery-1.11.1.min.js"></script>
        
-        <link  href="resources/fileupload/css/jquery.fileupload.css" type="text/css" rel="stylesheet">
+        <link  href="resources/css/jquery.fileupload.css" type="text/css" rel="stylesheet">
         <style>
 		#dialog-message-info,.submenu {
 		     display: none;
