--- a/src/FormulariosBundle/Resources/views/Login/nuevoUsuario.html.twig
+++ b/src/FormulariosBundle/Resources/views/Login/nuevoUsuario.html.twig
@@ -3,50 +3,48 @@
 
 {% block cuerpo %}
 
+<style>
+	.li {
+	    color: red;
+	}
+</style>
+
 
 <div class="row form">
-    <form>
+    <form action="{{ path('validaUsuario') }}" method="post">
 
-    <h3>Alta Usuariooooooooooooooo</h3>
+    <h3>Alta Usuario</h3>
         <div class="row">
 
             <div class="twocol">
                 <label>Apellido</label> 
                 <input id="apellido" name="apellido" class="input required" type="text"> 
                 <label>Mail</label>
-                <input id="reg_email" name="reg_email" class="input required" type="text"> 
+                <input id="email" name="email" class="input required" type="text"> 
             </div>
 
             <div class="twocol">
 		<label>Nombre</label> 
-                <input id="reg_nombre" name="reg_nombre" class="input required" type="text">
+                <input id="nombre" name="nombre" class="input required" type="text">
                 <label>Contraseña</label>
-                <input id="reg_password" name="reg_password" class="input required" type="password">    
+                <input id="password" name="password" class="input required" type="password">    
             </div>
             
             <div class="twocol">
                 <label>Organización</label>
-                <input id="reg_organizacion" name="reg_organizacion" class="input required" type="text">
+                <input id="organizacion" name="organizacion" class="input required" type="text">
 		<label>Repita Contraseña</label>
-                <input id="reg_password_verify" name="reg_password_verify" class="input required" type="password">
+                <input id="password_verify" name="password_verify" class="input required" type="password">
             </div>
 
             <div class="twocol">
                 <label>Teléfono</label> 
-                <input id="reg_telefono" name="reg_telefono" class="input required" type="text"> 
-            </div>
-
- 	    <div class="twocol">
-		<label>Rol</label> 
-                <select name="rol" id="rol">
-                    <option value="1">Evaluador</option>
-                    <option value="2">Postulante</option> 
-                </select>
+                <input id="telefono" name="telefono" class="input required" type="text"> 
             </div>
 
             <div class="row"><br>
-		    <a class="button" href="{{ path('login') }}">Cancelar</a>                   
-                    <a href="{{ path('validarUsuario') }}">Finalizar</a> 
+		    <a class='li' href="{{ path('login') }}">Cancelar</a>                   
+                    <button type="submit" >Finalizar</button>
             </div>
         </div>
     </form>
